[gd_scene load_steps=10 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://fonts/menuFont1.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/MiniGames/KinematicBody2D.gd" type="Script" id=3]
[ext_resource path="res://Space Background.png" type="Texture" id=4]
[ext_resource path="res://fonts/RobotoCondensed-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/MiniGames/TIME.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36.5468, 22.3303 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 546.401, 363.451 )

[sub_resource type="DynamicFont" id=3]
size = 50
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer"]

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.35
autostart = true

[node name="MatterCompressor" type="KinematicBody2D" parent="."]
position = Vector2( 490.515, 570.849 )
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="MatterCompressor"]
position = Vector2( 0, -0.315002 )
scale = Vector2( 2.5, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MatterCompressor/Area2D"]
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="MatterCompressor/Area2D/CollisionShape2D"]
position = Vector2( -0.282837, 0 )
color = Color( 0.286275, 0.992157, 0, 1 )
polygon = PoolVector2Array( -30.0187, -7.90118, -30.0075, 8.10663, 30.1846, 8.11865, 30.18, -7.92462 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 490.515, 282.489 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 20.0226, 24.0271 )
shape = SubResource( 2 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TIME" type="Label" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -111.0
margin_right = 111.0
margin_bottom = 186.0
custom_fonts/font = SubResource( 3 )
text = "TIME
TIME:TIME
"
align = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 864.0
margin_bottom = -407.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="copper" type="Label" parent="UI/VBoxContainer"]
margin_right = 160.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 2 )
text = "Copper:  %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="iron" type="Label" parent="UI/VBoxContainer"]
margin_top = 36.0
margin_right = 160.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 2 )
text = "Iron:  %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="silicon" type="Label" parent="UI/VBoxContainer"]
margin_top = 72.0
margin_right = 160.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 2 )
text = "Silicon:  %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gold" type="Label" parent="UI/VBoxContainer"]
margin_top = 108.0
margin_right = 160.0
margin_bottom = 140.0
custom_fonts/font = ExtResource( 2 )
text = "Gold:  %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cobalt" type="Label" parent="UI/VBoxContainer"]
margin_top = 144.0
margin_right = 160.0
margin_bottom = 176.0
custom_fonts/font = ExtResource( 2 )
text = "Cobalt:  %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="."]
z_index = -500
texture = ExtResource( 4 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[connection signal="timeout" from="Timer" to="Node2D" method="_on_Timer_timeout"]
[connection signal="body_entered" from="MatterCompressor/Area2D" to="Node2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="Node2D" method="_on_Area2D_body_exited"]
